Fri Nov  4 07:28:29 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Options.html:
          Extended documentation for ORBWaitStrategy mt_noupcall

Thu Nov 03 09:51:13 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
        Fixed error in previous commit

Thu Nov 03 08:45:13 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * tests/Bug_3531b_Regression/server.cpp:
          Fixed compile warning on Solaris10 build.

Wed Nov 02 13:30:13 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
          Put narrow in var, use ACE_NEW  with CIAO_FACET


Wed Nov 02 08:30:13 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        Merged changes from Remedy work branch.

        === start changelog ===

        Tue Nov  1 14:29:07 UTC 2011  Marcel Smit  <msmit@remedy.nl>

                * TAO_IDL/be/be_visitor_component/executor_exs.cpp:
                  Fixed link issues on windows.

        Tue Nov  1 12:52:03 UTC 2011  Marcel Smit  <msmit@remedy.nl>

                * TAO_IDL/be/be_visitor_component/component_ex_idl.cpp:
                * TAO_IDL/be/be_visitor_component/component_exh.cpp:
                * TAO_IDL/be/be_visitor_component/executor_exh.cpp:
                * TAO_IDL/be/be_visitor_component/executor_exs.cpp:
                  Reverted a few of my last changes. An derived executor
                  is not directly derived from its base anymore (on
                  executor IDL level as well as on implementation level).

        Mon Oct 31 15:14:05 UTC 2011  Marcel Smit  <msmit@remedy.nl>

                * TAO_IDL/be/be_type.cpp:
                  Fixed new line.

        Fri Oct 28 11:22:03 UTC 2011  Marcel Smit  <msmit@remedy.nl>

                * tests/Bug_3768_Regression/TestCallback.cpp:
                * tests/Bug_3768_Regression/TestServer.cpp: